--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,15 @@
 **/.latex_build/
 *.history
 /Presentation/.latex_build
+Presentation/.latex_build/main.aux
+Presentation/.latex_build/main.bbl
+Presentation/.latex_build/main.bcf
+Presentation/.latex_build/main.blg
+Presentation/.latex_build/main.fdb_latexmk
+Presentation/.latex_build/main.fls
+Presentation/.latex_build/main.log
+Presentation/.latex_build/main.nav
+Presentation/.latex_build/main.out
+Presentation/.latex_build/main.snm
+Presentation/.latex_build/main.toc
+Presentation/output/main.synctex.gz
