--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,14 @@ Presentation/.latex_build/main.out
 Presentation/.latex_build/main.snm
 Presentation/.latex_build/main.toc
 Presentation/output/main.synctex.gz
+Presentation/.latex_build/main.aux
+Presentation/.latex_build/main.bcf
+Presentation/.latex_build/main.blg
+Presentation/.latex_build/main.fdb_latexmk
+Presentation/.latex_build/main.fls
+Presentation/.latex_build/main.log
+Presentation/.latex_build/main.nav
+Presentation/.latex_build/main.out
+Presentation/.latex_build/main.run.xml
+Presentation/.latex_build/main.snm
+Presentation/.latex_build/main.toc
