--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ Presentation/.latex_build/main.out
 Presentation/.latex_build/main.run.xml
 Presentation/.latex_build/main.snm
 Presentation/.latex_build/main.toc
+Presentation/output/main.log
+Presentation/output/main.synctex.gz
