--- a/Code/julia/Gillespies/Project.toml
+++ b/Code/julia/Gillespies/Project.toml
@@ -9,6 +9,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 
@@ -18,5 +19,6 @@ JSON = "0.21.4"
 LinearAlgebra = "1.11.0"
 ModelingToolkit = "10.2.0"
 NPZ = "0.4.3"
+PrecompileTools = "1.2.1"
 Random = "1.11.0"
 StochasticDiffEq = "6.80.0"
