--- a/Code/julia/Project.toml
+++ b/Code/julia/Project.toml
@@ -3,5 +3,6 @@ ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 Gillespies = "abee9424-dfe6-4e1a-848e-dd7b9d15045f"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SSAExecutionModule = "c96e3573-cddc-40ac-bc73-ee1c3589917c"
